--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.6) quantal; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 16 Apr 2013 22:50:33 -0400
+
 menulibre (13.04.5) precise; urgency=low
 
   * New release.
