--- a/po/fr.po
+++ b/po/fr.po
@@ -7,15 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-04-15 20:42-0400\n"
-"PO-Revision-Date: 2012-10-28 09:27+0000\n"
-"Last-Translator: mimilus <Unknown>\n"
+"POT-Creation-Date: 2013-04-16 22:15-0400\n"
+"PO-Revision-Date: 2013-04-16 20:33+0000\n"
+"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-16 05:13+0000\n"
-"X-Generator: Launchpad (build 16564)\n"
+"X-Launchpad-Export-Date: 2013-04-17 05:39+0000\n"
+"X-Generator: Launchpad (build 16567)\n"
+"Language: frnech\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
@@ -27,7 +29,7 @@ msgstr "Nom de l'icône"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
-msgstr "Fichier Image"
+msgstr "Fichier image"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
@@ -75,7 +77,7 @@ msgstr "_Fichier"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr "Ajouter un _Nouveau Lanceur"
+msgstr "Ajouter un _nouveau lanceur"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
@@ -89,7 +91,7 @@ msgstr "_Aide"
 msgid "_Contents"
 msgstr "_Contenus"
 
-#: ../data/ui/MenulibreWindow.ui.h:19 ../menulibre/MenulibreWindow.py:1412
+#: ../data/ui/MenulibreWindow.ui.h:19 ../menulibre/MenulibreWindow.py:1510
 msgid "Add Launcher"
 msgstr "Ajouter un lanceur"
 
@@ -135,11 +137,11 @@ msgstr "Application"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "Categories"
-msgstr ""
+msgstr "Catégories"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid "Applications"
-msgstr ""
+msgstr "Applications"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<b>No applications found.</b>"
@@ -147,11 +149,11 @@ msgstr "<b>Pas d'application trouvée.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Try searching everything."
-msgstr "Essayez de chercher tout."
+msgstr "Essayer de rechercher tout."
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Search Failed"
-msgstr ""
+msgstr "Recherche échouée"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "<big><b>Application Name</b></big>"
@@ -161,7 +163,7 @@ msgstr "<big><b>Nom Application</b></big>"
 msgid "<i>A quick snippet about your application.</i>"
 msgstr "<i>Un extrait rapide à propos de votre application.</i>"
 
-#: ../data/ui/MenulibreWindow.ui.h:37 ../menulibre/MenulibreWindow.py:237
+#: ../data/ui/MenulibreWindow.ui.h:37 ../menulibre/MenulibreWindow.py:248
 msgid "Command"
 msgstr "Commande"
 
@@ -189,21 +191,21 @@ msgstr "Masquer depuis menus"
 msgid "<b>Options</b>"
 msgstr "<b>Options</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:44 ../menulibre/MenulibreWindow.py:273
+#: ../data/ui/MenulibreWindow.ui.h:44 ../menulibre/MenulibreWindow.py:283
 msgid "Name"
 msgstr "Nom"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Add category..."
-msgstr ""
+msgstr "Ajouter une catégorie..."
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Remove category"
-msgstr ""
+msgstr "Supprimer une catégorie"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Clear categories"
-msgstr ""
+msgstr "Effacer une Catégorie"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "<b>Categories</b>"
@@ -214,44 +216,44 @@ msgid "General Settings"
 msgstr "Paramètres généraux"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
-msgid "Add Quicklist"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:51
-msgid "Remove Quicklist"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:52
-msgid "Move Up"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:53
-msgid "Move Down"
-msgstr ""
-
-#: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Quicklists"
 msgstr "Listes rapides"
 
-#: ../data/ui/MenulibreWindow.ui.h:55
+#: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Editor"
 msgstr "Éditeur"
 
-#: ../data/ui/MenulibreWindow.ui.h:56
+#: ../data/ui/MenulibreWindow.ui.h:52
 msgid "label"
 msgstr "nom"
 
-#: ../data/ui/MenulibreWindow.ui.h:57
+#: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Delete this launcher..."
 msgstr "Supprimer ce lanceur ..."
 
-#: ../data/ui/MenulibreWindow.ui.h:58
+#: ../data/ui/MenulibreWindow.ui.h:54
 msgid "<small>Filename</small>"
 msgstr "<small>Nom de fichier</small>"
 
+#: ../data/ui/MenulibreWindow.ui.h:55
+msgid "Add Quicklist"
+msgstr "Ajouter une liste rapide"
+
+#: ../data/ui/MenulibreWindow.ui.h:56
+msgid "Remove Quicklist"
+msgstr "Supprimer la liste rapide"
+
+#: ../data/ui/MenulibreWindow.ui.h:57
+msgid "Move Up"
+msgstr "Monter"
+
+#: ../data/ui/MenulibreWindow.ui.h:58
+msgid "Move Down"
+msgstr "Descendre"
+
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Application Settings"
-msgstr ""
+msgstr "Paramètres Application"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "<big><b>Remove Launcher?</b></big>"
@@ -264,132 +266,153 @@ msgstr ""
 "Êtes-vous sûr de vouloir supprimer ce lanceur ? Cela ne pourra pas être "
 "annulé."
 
-#: ../menulibre/MenulibreWindow.py:73
+#: ../menulibre/MenulibreWindow.py:77 ../menulibre/MenulibreWindow.py:316
+#: ../menulibre/MenulibreWindow.py:1300
 msgid "Multimedia"
 msgstr "Multimédia"
 
-#: ../menulibre/MenulibreWindow.py:74
+#: ../menulibre/MenulibreWindow.py:78 ../menulibre/MenulibreWindow.py:301
+#: ../menulibre/MenulibreWindow.py:1290
 msgid "Development"
 msgstr "Développement"
 
-#: ../menulibre/MenulibreWindow.py:75
+#: ../menulibre/MenulibreWindow.py:79 ../menulibre/MenulibreWindow.py:304
+#: ../menulibre/MenulibreWindow.py:1292
 msgid "Education"
 msgstr "Éducation"
 
-#: ../menulibre/MenulibreWindow.py:76
+#: ../menulibre/MenulibreWindow.py:80 ../menulibre/MenulibreWindow.py:307
+#: ../menulibre/MenulibreWindow.py:1294
 msgid "Games"
 msgstr "Jeux"
 
-#: ../menulibre/MenulibreWindow.py:77
+#: ../menulibre/MenulibreWindow.py:81 ../menulibre/MenulibreWindow.py:310
+#: ../menulibre/MenulibreWindow.py:1296
 msgid "Graphics"
 msgstr "Infographie"
 
-#: ../menulibre/MenulibreWindow.py:78
+#: ../menulibre/MenulibreWindow.py:82 ../menulibre/MenulibreWindow.py:313
+#: ../menulibre/MenulibreWindow.py:1298
 msgid "Internet"
 msgstr "Internet"
 
-#: ../menulibre/MenulibreWindow.py:79
+#: ../menulibre/MenulibreWindow.py:83 ../menulibre/MenulibreWindow.py:319
+#: ../menulibre/MenulibreWindow.py:1302
 msgid "Office"
 msgstr "Bureau"
 
-#: ../menulibre/MenulibreWindow.py:80
+#: ../menulibre/MenulibreWindow.py:84 ../menulibre/MenulibreWindow.py:322
+#: ../menulibre/MenulibreWindow.py:1304
 msgid "Other"
-msgstr ""
+msgstr "Autre"
 
-#: ../menulibre/MenulibreWindow.py:81
+#: ../menulibre/MenulibreWindow.py:85 ../menulibre/MenulibreWindow.py:325
+#: ../menulibre/MenulibreWindow.py:1306
 msgid "Settings"
 msgstr "Paramètres"
 
-#: ../menulibre/MenulibreWindow.py:82
+#: ../menulibre/MenulibreWindow.py:86 ../menulibre/MenulibreWindow.py:328
+#: ../menulibre/MenulibreWindow.py:1308
 msgid "System"
 msgstr "Système"
 
-#: ../menulibre/MenulibreWindow.py:83
+#: ../menulibre/MenulibreWindow.py:87 ../menulibre/MenulibreWindow.py:298
+#: ../menulibre/MenulibreWindow.py:1288
 msgid "Accessories"
 msgstr "Accessoires"
 
-#: ../menulibre/MenulibreWindow.py:84
+#: ../menulibre/MenulibreWindow.py:88
 msgid "WINE"
 msgstr "WINE"
 
-#: ../menulibre/MenulibreWindow.py:136 ../menulibre/MenulibreWindow.py:514
-#: ../menulibre/MenulibreWindow.py:537
+#: ../menulibre/MenulibreWindow.py:140 ../menulibre/MenulibreWindow.py:582
+#: ../menulibre/MenulibreWindow.py:605
 msgid "Search Applications"
-msgstr ""
+msgstr "Rechercher des applications"
 
-#: ../menulibre/MenulibreWindow.py:218
+#: ../menulibre/MenulibreWindow.py:229
 msgid "Show"
 msgstr "Afficher"
 
-#: ../menulibre/MenulibreWindow.py:221
+#: ../menulibre/MenulibreWindow.py:232
 msgid "Shortcut Name"
-msgstr ""
+msgstr "Nom du raccourci"
 
-#: ../menulibre/MenulibreWindow.py:229
+#: ../menulibre/MenulibreWindow.py:240
 msgid "Displayed Name"
-msgstr ""
+msgstr "Nom affiché"
 
-#: ../menulibre/MenulibreWindow.py:271
+#: ../menulibre/MenulibreWindow.py:281
 msgid "Image"
 msgstr "Image"
 
-#: ../menulibre/MenulibreWindow.py:526
+#. Translators: Required menu item
+#: ../menulibre/MenulibreWindow.py:359
 #, python-format
-msgid "Search %s"
+msgid "%s (Required)"
 msgstr ""
 
-#: ../menulibre/MenulibreWindow.py:544
+#: ../menulibre/MenulibreWindow.py:594
+#, python-format
+msgid "Search %s"
+msgstr "Rechercher %s"
+
+#: ../menulibre/MenulibreWindow.py:612
 #, python-format
 msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "This cannot be undone."
 msgstr ""
+"Etes-vous sûr que vous voulez supprimer « %s » ?\n"
+"Cela ne peut pas être annulé."
 
-#: ../menulibre/MenulibreWindow.py:553
+#: ../menulibre/MenulibreWindow.py:621
 #, python-format
 msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "The menu item will be restored to system defaults."
 msgstr ""
+"Etes-vous sûr que vous voulez supprimer « %s » ?\n"
+"Le menu sélément sera restoré avec les paramètres par défaut du système."
 
-#: ../menulibre/MenulibreWindow.py:562 ../menulibre/MenulibreWindow.py:1200
-#: ../menulibre/MenulibreWindow.py:1338 ../menulibre/MenulibreWindow.py:1492
-#: ../menulibre/MenulibreWindow.py:1664 ../menulibre/MenulibreWindow.py:1666
+#: ../menulibre/MenulibreWindow.py:630 ../menulibre/MenulibreWindow.py:1271
+#: ../menulibre/MenulibreWindow.py:1436 ../menulibre/MenulibreWindow.py:1586
+#: ../menulibre/MenulibreWindow.py:1756 ../menulibre/MenulibreWindow.py:1762
 #: ../menulibre_lib/MenulibreXdg.py:44
 msgid "New Menu Item"
-msgstr ""
+msgstr "Nouvel élément menu"
 
-#: ../menulibre/MenulibreWindow.py:753 ../menulibre/MenulibreWindow.py:774
+#: ../menulibre/MenulibreWindow.py:824 ../menulibre/MenulibreWindow.py:845
 msgid "Select an executable"
-msgstr ""
+msgstr "Sélectionner un exécutable"
 
-#: ../menulibre/MenulibreWindow.py:900
+#: ../menulibre/MenulibreWindow.py:971
 msgid "NewShortcut"
-msgstr ""
+msgstr "NouveauRaccourci"
 
-#: ../menulibre/MenulibreWindow.py:902
+#: ../menulibre/MenulibreWindow.py:973
 msgid "New Shortcut"
-msgstr ""
+msgstr "Nouveau raccourci"
 
-#: ../menulibre/MenulibreWindow.py:1216
+#: ../menulibre/MenulibreWindow.py:1310
 msgid "Unknown"
-msgstr ""
+msgstr "Inconnu"
 
-#: ../menulibre/MenulibreWindow.py:1383 ../menulibre/MenulibreWindow.py:1475
+#: ../menulibre/MenulibreWindow.py:1481 ../menulibre/MenulibreWindow.py:1571
 msgid "All Applications"
-msgstr ""
+msgstr "Toutes les applications"
 
-#: ../menulibre/MenulibreWindow.py:1412
+#: ../menulibre/MenulibreWindow.py:1510
 msgid "Add a new application launcher"
-msgstr ""
+msgstr "Ajouter un nouveau lanceur d'application"
 
-#: ../menulibre/MenulibreWindow.py:1706
+#: ../menulibre/MenulibreWindow.py:1806
 msgid "Search Results"
-msgstr ""
+msgstr "Résultats de la recherche"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
 msgid "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
-msgstr ""
+msgstr "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
@@ -407,24 +430,37 @@ msgid ""
 "# You should have received a copy of the GNU General Public License along \n"
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
+"# Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>\n"
+"# This program is free software: you can redistribute it and/or modify it \n"
+"# under the terms of the GNU General Public License version 3, as published "
+"\n"
+"# by the Free Software Foundation.\n"
+"# \n"
+"# This program is distributed in the hope that it will be useful, but \n"
+"# WITHOUT ANY WARRANTY; without even the implied warranties of \n"
+"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
+"# PURPOSE.  See the GNU General Public License for more details.\n"
+"# \n"
+"# You should have received a copy of the GNU General Public License along \n"
+"# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre_lib/MenulibreXdg.py:45
 msgid "A small descriptive blurb about this application."
-msgstr ""
+msgstr "Un petit texte descriptif à propos de cette application."
 
 #: ../menulibre_lib/MenulibreXdg.py:171
 #, python-format
 msgid "'%s' is not a .desktop file"
-msgstr ""
+msgstr "« %s » n'est pas un fichier .desktop"
 
 #: ../menulibre_lib/MenulibreXdg.py:174
 msgid "Initialized without required parameters."
-msgstr ""
+msgstr "Initialisé sans paramètres requis."
 
 #: ../menulibre_lib/MenulibreXdg.py:183
 #, python-format
 msgid "'%s' is not a .directory file"
-msgstr ""
+msgstr "« %s » n'est pas un fichier .répertoire"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
@@ -440,8 +476,8 @@ msgstr "Modifier les menus Système et Utilisateur avec facilité"
 
 #: ../menulibre.desktop.in.h:3
 msgid "Edit user menus"
-msgstr ""
+msgstr "Éditer les menus utilisateur"
 
 #: ../menulibre.desktop.in.h:4
 msgid "Edit system menus"
-msgstr ""
+msgstr "Éditer les menus système"
