--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.9) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 17 Apr 2013 22:00:58 -0400
+
 menulibre (13.04.8ubuntu1) UNRELEASED; urgency=low
 
   * Move quicklist code into glade file, update packaging
