--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.10) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 17 Apr 2013 22:02:04 -0400
+
 menulibre (13.04.9) precise; urgency=low
 
   * New release.
