--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.12) raring; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 17 Apr 2013 22:04:06 -0400
+
 menulibre (13.04.11) quantal; urgency=low
 
   * New release.
