--- a/po/pl.po
+++ b/po/pl.po
@@ -1,4 +1,4 @@
-# Czech translation for menulibre
+# Polish translation for menulibre
 # Copyright (c) 2013 Rosetta Contributors and Canonical Ltd 2013
 # This file is distributed under the same license as the menulibre package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
@@ -8,34 +8,34 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-17 20:50-0400\n"
-"PO-Revision-Date: 2013-04-13 09:15+0000\n"
-"Last-Translator: aloisam <a.musil@email.cz>\n"
-"Language-Team: Czech <cs@li.org>\n"
+"PO-Revision-Date: 2013-04-18 22:24+0000\n"
+"Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
+"Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-19 05:54+0000\n"
+"X-Launchpad-Export-Date: 2013-04-19 05:55+0000\n"
 "X-Generator: Launchpad (build 16567)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
-msgstr "Vyberte ikonu"
+msgstr "Wybierz ikonę"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Icon Name"
-msgstr "Ikona - název"
+msgstr "Nazwa ikony"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Image File"
-msgstr "Obrázek - soubor"
+msgstr "Plik obrazu"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Select an Image"
-msgstr "Vyberte obrázek"
+msgstr "Wybierz obraz"
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "<b>Select Icon</b>"
-msgstr "<b>Vyberte ikonu</b>"
+msgstr "<b>Wybierz ikonę</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "48x48"
@@ -59,11 +59,11 @@ msgstr "128x128"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "<b>Preview</b>"
-msgstr "<b>Náhled</b>"
+msgstr "<b>Podgląd</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "Select an icon"
-msgstr "Vyberte ikonu"
+msgstr "Wybierz ikonę"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "MenuLibre"
@@ -71,67 +71,67 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "_File"
-msgstr "_Soubor"
+msgstr "_Plik"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Add _New Launcher"
-msgstr "Přidat nový spouštěč"
+msgstr "Dodaj _nowy aktywator"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_Edit"
-msgstr "_Úpravy"
+msgstr "_Edycja"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Help"
-msgstr "_Nápověda"
+msgstr "Pomo_c"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Contents"
-msgstr "_Obsah"
+msgstr "_Spis treści"
 
 #: ../data/ui/MenulibreWindow.ui.h:19 ../menulibre/MenulibreWindow.py:1448
 msgid "Add Launcher"
-msgstr "Přidat spouštěč"
+msgstr "Dodaj aktywator"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Save All Changes"
-msgstr "Uložit všechny změny"
+msgstr "Zapisz wszystkie zmiany"
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "Save"
-msgstr "Uložit"
+msgstr "Zapisz"
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Undo the last action"
-msgstr "Vrátit zpět poslední akci"
+msgstr "Cofnij ostatnią czynność"
 
 #: ../data/ui/MenulibreWindow.ui.h:23
 msgid "Undo"
-msgstr "Zpět"
+msgstr "Cofnij"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Redo the last undone action"
-msgstr "Zopakovat poslední vrácenou akci"
+msgstr "Ponów ostatnią cofniętą czynność"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Redo"
-msgstr "Opakovat"
+msgstr "Ponów"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Revert all changes to last saved state"
-msgstr "Vrátit všechny změny k poslednímu uloženému stavu"
+msgstr "Przywraca wszystkie zmiany do ostatniego zapisanego stanu"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Revert"
-msgstr "Vrátit změny"
+msgstr "Przywróć"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Category"
-msgstr "Kategorie"
+msgstr "Kategoria"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application"
-msgstr "Aplikace"
+msgstr "Program"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "Categories"
@@ -139,71 +139,71 @@ msgstr "Kategorie"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid "Applications"
-msgstr "Aplikace"
+msgstr "Programy"
 
 #: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<b>No applications found.</b>"
-msgstr "<b>Žádná aplikace nenalezena.</b>"
+msgstr "<b>Program nie został odnaleziony.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Try searching everything."
-msgstr "Zkuste prohledat všechny aplikace"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Search Failed"
-msgstr "Vyhledávání selhalo"
+msgstr "Błąd szukania"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Název aplikace</b></big>"
+msgstr "<big><b>Nazwa programu</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<i>A quick snippet about your application.</i>"
-msgstr "<i>Stručný popis aplikace.</i>"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Command"
-msgstr "Příkaz"
+msgstr "Polecenie"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Working Directory"
-msgstr "Pracovní adresář"
+msgstr "Katalog roboczy"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "<b>Application Settings</b>"
-msgstr "<b>Nastavení aplikace</b>"
+msgstr "<b>Ustawienia programów</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "Run in terminal"
-msgstr "Spustit v terminálu"
+msgstr "Uruchom w terminalu"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
-msgstr "Použít upozornění na spuštění"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Hide from menus"
-msgstr "Nezobrazovat v nabídkách"
+msgstr "Ukryj w menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "<b>Options</b>"
-msgstr "<b>Možnosti</b>"
+msgstr "<b>Opcje</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:44 ../menulibre/MenulibreWindow.py:253
 msgid "Name"
-msgstr "Název"
+msgstr "Nazwa"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Add category..."
-msgstr ""
+msgstr "Dodaj kategorię..."
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Remove category"
-msgstr ""
+msgstr "Usuń kategorię"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Clear categories"
-msgstr ""
+msgstr "Wyczyść kategorie"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "<b>Categories</b>"
@@ -211,89 +211,88 @@ msgstr "<b>Kategorie</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "General Settings"
-msgstr "Obecná nastavení"
+msgstr "Ustawienia ogólne"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Show"
-msgstr "Zobrazit"
+msgstr "Pokaż"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Shortcut Name"
-msgstr "Název zkratky"
+msgstr "Nazwa skrótu"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Displayed Name"
-msgstr "Zobrazovaný název"
+msgstr "Nazwa wyświetlana"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Quicklists"
-msgstr "Podnabídky"
+msgstr "Szybkie listy"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Editor"
-msgstr "Editor"
+msgstr "Edytor"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "label"
-msgstr "popisek"
+msgstr "etykieta"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "Delete this launcher..."
-msgstr "Odstranit tento spouštěč"
+msgstr "Usuń ten aktywator..."
 
 #: ../data/ui/MenulibreWindow.ui.h:57
 msgid "<small>Filename</small>"
-msgstr "<small>Jméno souboru</small>"
+msgstr "<small>Nazwa pliku</small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Add Quicklist"
-msgstr ""
+msgstr "Dodaj szybką listę"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid "Remove Quicklist"
-msgstr ""
+msgstr "Usuń szybką listę"
 
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Move Up"
-msgstr ""
+msgstr "Przesuń w górę"
 
 #: ../data/ui/MenulibreWindow.ui.h:61
 msgid "Move Down"
-msgstr ""
+msgstr "Przesuń w dół"
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Application Settings"
-msgstr "Nastavení aplikace"
+msgstr "Ustawienia programu"
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "<big><b>Remove Launcher?</b></big>"
-msgstr "<big><b>Odstranit spouštěč?</b></big>"
+msgstr "<big><b>Usunąć aktywator?</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
 msgstr ""
-"Jste si jisti, že chcete odstranit tento spouštěč? Je to nevratný proces."
 
 #: ../menulibre/MenulibreWindow.py:77 ../menulibre/MenulibreWindow.py:286
 #: ../menulibre/MenulibreWindow.py:1238
 msgid "Multimedia"
-msgstr "Multimédia"
+msgstr "Multimedia"
 
 #: ../menulibre/MenulibreWindow.py:78 ../menulibre/MenulibreWindow.py:271
 #: ../menulibre/MenulibreWindow.py:1228
 msgid "Development"
-msgstr "Vývoj"
+msgstr "Rozwój oprogramowania"
 
 #: ../menulibre/MenulibreWindow.py:79 ../menulibre/MenulibreWindow.py:274
 #: ../menulibre/MenulibreWindow.py:1230
 msgid "Education"
-msgstr "Vzdělávání"
+msgstr "Nauka"
 
 #: ../menulibre/MenulibreWindow.py:80 ../menulibre/MenulibreWindow.py:277
 #: ../menulibre/MenulibreWindow.py:1232
 msgid "Games"
-msgstr "Hry"
+msgstr "Gry"
 
 #: ../menulibre/MenulibreWindow.py:81 ../menulibre/MenulibreWindow.py:280
 #: ../menulibre/MenulibreWindow.py:1234
@@ -308,51 +307,51 @@ msgstr "Internet"
 #: ../menulibre/MenulibreWindow.py:83 ../menulibre/MenulibreWindow.py:289
 #: ../menulibre/MenulibreWindow.py:1240
 msgid "Office"
-msgstr "Kancelář"
+msgstr "Biuro"
 
 #: ../menulibre/MenulibreWindow.py:84 ../menulibre/MenulibreWindow.py:292
 #: ../menulibre/MenulibreWindow.py:1242
 msgid "Other"
-msgstr "Ostatní"
+msgstr "Inne"
 
 #: ../menulibre/MenulibreWindow.py:85 ../menulibre/MenulibreWindow.py:295
 #: ../menulibre/MenulibreWindow.py:1244
 msgid "Settings"
-msgstr "Přizpůsobení"
+msgstr "Ustawienia"
 
 #: ../menulibre/MenulibreWindow.py:86 ../menulibre/MenulibreWindow.py:298
 #: ../menulibre/MenulibreWindow.py:1246
 msgid "System"
-msgstr "Systém"
+msgstr "System"
 
 #: ../menulibre/MenulibreWindow.py:87 ../menulibre/MenulibreWindow.py:268
 #: ../menulibre/MenulibreWindow.py:1226
 msgid "Accessories"
-msgstr "Příslušenství"
+msgstr "Akcesoria"
 
 #: ../menulibre/MenulibreWindow.py:88
 msgid "WINE"
-msgstr "Wine"
+msgstr "WINE"
 
 #: ../menulibre/MenulibreWindow.py:140 ../menulibre/MenulibreWindow.py:552
 #: ../menulibre/MenulibreWindow.py:575
 msgid "Search Applications"
-msgstr "Prohledat aplikace"
+msgstr ""
 
 #: ../menulibre/MenulibreWindow.py:251
 msgid "Image"
-msgstr "Obrázek"
+msgstr "Obraz"
 
 #. Translators: Required menu item
 #: ../menulibre/MenulibreWindow.py:329
 #, python-format
 msgid "%s (Required)"
-msgstr ""
+msgstr "%s (wymagane)"
 
 #: ../menulibre/MenulibreWindow.py:564
 #, python-format
 msgid "Search %s"
-msgstr "Prohledat %s"
+msgstr "Znajdź %s"
 
 #: ../menulibre/MenulibreWindow.py:582
 #, python-format
@@ -360,8 +359,6 @@ msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "This cannot be undone."
 msgstr ""
-"Jste si jisti, že chcete odstranit \"%s\"?\n"
-"Je to nevratný proces."
 
 #: ../menulibre/MenulibreWindow.py:591
 #, python-format
@@ -369,47 +366,45 @@ msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "The menu item will be restored to system defaults."
 msgstr ""
-"Jste si jisti, že chcete odstranit \"%s\"?\n"
-"Položka bude nastavena na výchozí hodnoty systému."
 
 #: ../menulibre/MenulibreWindow.py:600 ../menulibre/MenulibreWindow.py:1209
 #: ../menulibre/MenulibreWindow.py:1374 ../menulibre/MenulibreWindow.py:1524
 #: ../menulibre/MenulibreWindow.py:1729 ../menulibre/MenulibreWindow.py:1735
 #: ../menulibre_lib/MenulibreXdg.py:44
 msgid "New Menu Item"
-msgstr "Nová položka"
+msgstr "Nowa pozycja menu"
 
 #: ../menulibre/MenulibreWindow.py:794 ../menulibre/MenulibreWindow.py:815
 msgid "Select an executable"
-msgstr "Vyberte spustitelný soubor"
+msgstr "Wskaż plik wykonalny"
 
 #: ../menulibre/MenulibreWindow.py:909
 msgid "NewShortcut"
-msgstr "Nová zkratka"
+msgstr ""
 
 #: ../menulibre/MenulibreWindow.py:911
 msgid "New Shortcut"
-msgstr "Nová zkratka"
+msgstr "Nowy skrót"
 
 #: ../menulibre/MenulibreWindow.py:1248
 msgid "Unknown"
-msgstr ""
+msgstr "Nieznany"
 
 #: ../menulibre/MenulibreWindow.py:1419 ../menulibre/MenulibreWindow.py:1509
 msgid "All Applications"
-msgstr "Všechny aplikace"
+msgstr "Wszystkie programy"
 
 #: ../menulibre/MenulibreWindow.py:1448
 msgid "Add a new application launcher"
-msgstr "Přidat nový spoušteč aplikací"
+msgstr "Dodaj nowy aktywator programu"
 
 #: ../menulibre/MenulibreWindow.py:1779
 msgid "Search Results"
-msgstr "Výsledky vyhledávání"
+msgstr "Wyniki wyszukiwania"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
 msgid "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
-msgstr "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
+msgstr "Prawa autorskie (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
@@ -427,53 +422,41 @@ msgid ""
 "# You should have received a copy of the GNU General Public License along \n"
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
-"# Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>\n"
-"# Tento program je svobodný software: můžete jej šířit a upravovat \n"
-"# podle podmínek GNU GPL (všeobecné veřejné licence GNU) verze 3 \n"
-"# ve znění zveřejněném Free Software Foundation.\n"
-"# \n"
-"# Tento program je šířen s nadějí, že bude užitečný, ale \n"
-"# BEZ JAKÉKOLIV ZÁRUKY; a to dokonce i bez předpokládaných záruk \n"
-"# OBCHODOVATELNOSTI, USPOKOJIVÉ KVALITY, nebo VHODNOSTI PRO \n"
-"# URČITÝ ÚČEL. Podrobnosti najdete v GNU GPL.\n"
-"# \n"
-"# Spolu s tímto programem by jste měli obdržet kopii GNU GPL.\n"
-"# Pokud se tak nestalo, najdete ji na <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre_lib/MenulibreXdg.py:45
 msgid "A small descriptive blurb about this application."
-msgstr "Stručný popis aplikace"
+msgstr ""
 
 #: ../menulibre_lib/MenulibreXdg.py:171
 #, python-format
 msgid "'%s' is not a .desktop file"
-msgstr "'%s' není soubor typu .desktop"
+msgstr "'%s' nie jest plikiem .desktop"
 
 #: ../menulibre_lib/MenulibreXdg.py:174
 msgid "Initialized without required parameters."
-msgstr "Spustit bez vyžadovaných parametrů"
+msgstr ""
 
 #: ../menulibre_lib/MenulibreXdg.py:183
 #, python-format
 msgid "'%s' is not a .directory file"
-msgstr "'%s' není soubor typu .directory"
+msgstr "'%s' nie jest plikiem .directory"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
-msgstr "Ukázat ladící zprávy (-vv debugs menulibre_lib also)"
+msgstr ""
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "MenuLibre"
+msgstr "Edytor menu"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
-msgstr "Snadná úprava systémových a uživatelských menu"
+msgstr "Łatwo edytuj menu systemowe i użytkownika"
 
 #: ../menulibre.desktop.in.h:3
 msgid "Edit user menus"
-msgstr "Upravit uživatelské nabídky"
+msgstr "Edycja menu użytkownika"
 
 #: ../menulibre.desktop.in.h:4
 msgid "Edit system menus"
-msgstr "Upravit systémové nabídky"
+msgstr "Edycja menu systemowego"
