--- a/po/pl.po
+++ b/po/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-17 20:50-0400\n"
-"PO-Revision-Date: 2013-04-18 22:24+0000\n"
+"PO-Revision-Date: 2013-04-19 11:12+0000\n"
 "Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-19 05:55+0000\n"
+"X-Launchpad-Export-Date: 2013-04-20 06:04+0000\n"
 "X-Generator: Launchpad (build 16567)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
@@ -147,7 +147,7 @@ msgstr "<b>Program nie został odnaleziony.</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Try searching everything."
-msgstr ""
+msgstr "Spróbuj przeszukać wszystko."
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Search Failed"
@@ -159,7 +159,7 @@ msgstr "<big><b>Nazwa programu</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<i>A quick snippet about your application.</i>"
-msgstr ""
+msgstr "<i>Szybki strzęp informacji o Twoim programie.</i>"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Command"
@@ -179,7 +179,7 @@ msgstr "Uruchom w terminalu"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
-msgstr ""
+msgstr "Użyj powiadomienia o uruchomieniu"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Hide from menus"
@@ -273,6 +273,7 @@ msgstr "<big><b>Usunąć aktywator?</b></big>"
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
 msgstr ""
+"Czy na pewno chcesz usunąć ten aktywator? Tej operacji nie można cofnąć."
 
 #: ../menulibre/MenulibreWindow.py:77 ../menulibre/MenulibreWindow.py:286
 #: ../menulibre/MenulibreWindow.py:1238
@@ -336,7 +337,7 @@ msgstr "WINE"
 #: ../menulibre/MenulibreWindow.py:140 ../menulibre/MenulibreWindow.py:552
 #: ../menulibre/MenulibreWindow.py:575
 msgid "Search Applications"
-msgstr ""
+msgstr "Wyszukiwanie programów"
 
 #: ../menulibre/MenulibreWindow.py:251
 msgid "Image"
@@ -359,6 +360,8 @@ msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "This cannot be undone."
 msgstr ""
+"Czy na pewno chcesz usunąć \"%s\"?\n"
+"Tej operacji nie można cofnąć."
 
 #: ../menulibre/MenulibreWindow.py:591
 #, python-format
@@ -366,6 +369,8 @@ msgid ""
 "Are you sure you wish to remove \"%s\"?\n"
 "The menu item will be restored to system defaults."
 msgstr ""
+"Czy na pewno chcesz usunąć \"%s\"?\n"
+"Porządek menu zostanie przywrócony do domyślnie systemowego."
 
 #: ../menulibre/MenulibreWindow.py:600 ../menulibre/MenulibreWindow.py:1209
 #: ../menulibre/MenulibreWindow.py:1374 ../menulibre/MenulibreWindow.py:1524
@@ -380,7 +385,7 @@ msgstr "Wskaż plik wykonalny"
 
 #: ../menulibre/MenulibreWindow.py:909
 msgid "NewShortcut"
-msgstr ""
+msgstr "Nowy skrót"
 
 #: ../menulibre/MenulibreWindow.py:911
 msgid "New Shortcut"
@@ -422,10 +427,26 @@ msgid ""
 "# You should have received a copy of the GNU General Public License along \n"
 "# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
+"# Prawa autorskie (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>\n"
+"# Niniejszy program jest wolnym oprogramowaniem; możesz go \n"
+"# rozprowadzać dalej i/lub modyfikować na warunkach Powszechnej \n"
+"# Licencji Publicznej GNU, wydanej przez Fundację Wolnego \n"
+"# Oprogramowania - według wersji 3.\n"
+"# \n"
+"# Niniejszy program rozpowszechniany jest z nadzieją, iż będzie on \n"
+"# użyteczny - jednak BEZ JAKIEJKOLWIEK GWARANCJI, nawet domyślnej \n"
+"# gwarancji PRZYDATNOŚCI HANDLOWEJ, SATYSFAKCJI Z JAKOŚCI \n"
+"# albo PRZYDATNOŚCI DO OKREŚLONYCH ZASTOSOWAŃ. W celu \n"
+"# uzyskania bliższych informacji sięgnij do Powszechnej Licencji Publicznej "
+"GNU.\n"
+"# \n"
+"# Z pewnością wraz z niniejszym programem otrzymałeś też egzemplarz \n"
+"# Powszechnej Licencji Publicznej GNU (GNU General Public License); \n"
+"# jeśli nie, zobacz <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre_lib/MenulibreXdg.py:45
 msgid "A small descriptive blurb about this application."
-msgstr ""
+msgstr "Drobna opisowa informacja o tym programie."
 
 #: ../menulibre_lib/MenulibreXdg.py:171
 #, python-format
@@ -434,7 +455,7 @@ msgstr "'%s' nie jest plikiem .desktop"
 
 #: ../menulibre_lib/MenulibreXdg.py:174
 msgid "Initialized without required parameters."
-msgstr ""
+msgstr "Uruchomione bez wymaganych parametrów."
 
 #: ../menulibre_lib/MenulibreXdg.py:183
 #, python-format
@@ -443,7 +464,7 @@ msgstr "'%s' nie jest plikiem .directory"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
-msgstr ""
+msgstr "Pokazuj wiadomości debugowania (-vv debuguje także menulibre_lib)"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
