--- a/po/ru.po
+++ b/po/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-17 20:50-0400\n"
-"PO-Revision-Date: 2013-04-16 11:20+0000\n"
-"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
+"PO-Revision-Date: 2013-04-19 11:17+0000\n"
+"Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-19 05:55+0000\n"
+"X-Launchpad-Export-Date: 2013-04-20 06:04+0000\n"
 "X-Generator: Launchpad (build 16567)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
@@ -348,7 +348,7 @@ msgstr "Изображение"
 #: ../menulibre/MenulibreWindow.py:329
 #, python-format
 msgid "%s (Required)"
-msgstr ""
+msgstr "%s (требуется)"
 
 #: ../menulibre/MenulibreWindow.py:564
 #, python-format
