--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.14) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 24 Apr 2013 20:29:55 -0400
+
 menulibre (13.04.13ubuntu1) UNRELEASED; urgency=low
 
   * Fix broken mkdir
