--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.15) precise; urgency=low
+
+  * Launchpad automatic translations update.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sat, 27 Apr 2013 09:44:09 -0400
+
 menulibre (13.04.14) precise; urgency=low
 
   * New release.
