--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.04.17) raring; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sat, 27 Apr 2013 09:46:19 -0400
+
 menulibre (13.04.16) quantal; urgency=low
 
   * New release.
